@@ -1,3 +1,6 @@
+[B]Version 1.2.7 (Oct 5, 2012)[/B]
+- Added support for background fanart
+
 [B]Version 1.2.6 (Oct 1, 2012)[/B]
 - Updated playback path settings to require you to browse for it vs. free-text to ensure the path that is used for live TV playback is correctly formatted
 - Added resume/partially watched support (e.g. if you've started to watch a show in SageTV, XBMC will know this and prompt you if you want to resume at the same point in SageTV); note that this does NOT sync the progress or watched status from XBMC back to SageTV
